--- a/LifeArcade/installation.html
+++ b/LifeArcade/installation.html
@@ -152,10 +152,14 @@
   <!-- Video Background Layer (Global) -->
   <div id="video-background-layer"
     style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: #000000;">
-    <video id="bg-video-idle" src="/videos/idle.mp4" loop muted playsinline
-      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 0.8s ease;"></video>
-    <video id="bg-video-loop" src="/videos/loop.mp4" loop muted playsinline
-      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 0.8s ease;"></video>
+    <!-- Responsive container for videos (matches screen dimensions) -->
+    <div id="video-container"
+      style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+      <video id="bg-video-idle" src="/videos/idle.mp4" loop muted playsinline
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.8s ease;"></video>
+      <video id="bg-video-loop" src="/videos/loop.mp4" loop muted playsinline
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.8s ease;"></video>
+    </div>
   </div>
 
   <!-- Main app container - screens will be injected here -->
@@ -173,6 +177,7 @@
     import { IframeComm } from './src/installation/IframeComm.js'
     import { ResetManager } from './src/installation/ResetManager.js'
     import { ThemeManager } from './src/installation/ThemeManager.js'
+    import { getResponsiveDimensions } from './src/installation/ScreenHelper.js'
 
     // ===== IMPORT RESET SYSTEM =====
     import { ResetCircleUI } from './src/utils/ResetCircleUI.js'
@@ -217,8 +222,12 @@
     // Initialize video sources with current theme
     updateVideoSources(themeManager.getTheme())
 
+    // Initialize video container size (responsive)
+    updateVideoContainerSize()
+
     console.log('✓ Theme system connected (keys 1-4: day, 5-8: night)')
     console.log('✓ Video system connected to theme')
+    console.log('✓ Video container responsive initialized')
 
     // ===== INITIALIZE RESET SYSTEM =====
     const resetCircleUI = new ResetCircleUI()
@@ -292,6 +301,25 @@
       }
 
       console.log(`Video sources updated for ${theme} mode: ${idleSrc}, ${loopSrc}`)
+    }
+
+    /**
+     * Update video container size to match screen dimensions (responsive)
+     * Applies same logic as screens: portrait 1200×1920 with aspect ratio 10:16
+     */
+    function updateVideoContainerSize() {
+      const { containerWidth, containerHeight } = getResponsiveDimensions()
+      const videoContainer = document.getElementById('video-container')
+
+      if (!videoContainer) return
+
+      videoContainer.style.width = `${containerWidth}px`
+      videoContainer.style.height = `${containerHeight}px`
+      videoContainer.style.maxWidth = '100vw'
+      videoContainer.style.maxHeight = '100vh'
+      videoContainer.style.aspectRatio = '10 / 16'
+
+      console.log(`Video container updated: ${containerWidth}×${containerHeight}`)
     }
 
     function updateVideoBackground(screenName) {
@@ -393,6 +421,13 @@
 
     console.log('✓ Installation ready')
     console.log('Press SPACE to begin')
+
+    // ===== RESIZE LISTENER FOR VIDEO CONTAINER =====
+    window.addEventListener('resize', () => {
+      updateVideoContainerSize()
+    })
+
+    console.log('✓ Resize listener registered for video container')
   </script>
 </body>
 
