--- a/conways-arcade-online/index.html
+++ b/conways-arcade-online/index.html
@@ -146,7 +146,7 @@
       overflow: hidden;
     }
   </style>
-  <script type="module" crossorigin src="/conways-arcade-online/assets/main-DbvX6v-W.js"></script>
+  <script type="module" crossorigin src="/conways-arcade-online/assets/main-CuagK9-X.js"></script>
 </head>
 
 <body>
@@ -154,7 +154,8 @@
   <div id="video-background-layer"
     style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: #000000;">
     <!-- Responsive container for videos (matches screen dimensions) -->
-    <div id="video-container" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <div id="video-container"
+      style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
       <video id="bg-video-idle" src="/conways-arcade-online/videos/idle.mp4" loop muted playsinline
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.8s ease;"></video>
       <video id="bg-video-loop" src="/conways-arcade-online/videos/loop.mp4" loop muted playsinline
@@ -168,8 +169,7 @@
   <!-- p5.js (Local - Offline) -->
   <script src="/conways-arcade-online/lib/p5.min.js"></script>
 
-  <!-- Main initialization script -->
-
+  <!-- Main initialization script -->
 </body>
 
 </html>
