--- a/LifeArcade/installation.html
+++ b/LifeArcade/installation.html
@@ -90,6 +90,7 @@
       overflow: hidden;
       width: 100vw;
       height: 100vh;
+      cursor: none;
     }
 
     /* ===== GLOBAL ANIMATIONS ===== */
@@ -153,8 +154,7 @@
   <div id="video-background-layer"
     style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: #000000;">
     <!-- Responsive container for videos (matches screen dimensions) -->
-    <div id="video-container"
-      style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <div id="video-container" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
       <video id="bg-video-idle" src="/videos/idle.mp4" loop muted playsinline
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.8s ease;"></video>
       <video id="bg-video-loop" src="/videos/loop.mp4" loop muted playsinline
