--- a/LifeArcade/public/games/game-wrapper.html
+++ b/LifeArcade/public/games/game-wrapper.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,6 +42,10 @@
       font-family: 'Google Sans Flex', Arial, sans-serif;
       overflow: hidden;
       position: relative;
+    }
+
+    canvas {
+      cursor: none;
     }
 
     /* Game header overlay */
@@ -102,6 +107,7 @@
     }
   </style>
 </head>
+
 <body>
   <!-- Game header overlay -->
   <div id="game-header">
@@ -246,4 +252,5 @@
     debugLog('game-wrapper: Keyboard interceptor initialized (Escape, 1-8)')
   </script>
 </body>
+
 </html>
